--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "skatejs-react-integration": "^2.0.6",
+    "test": "file:../test/test-0.0.1.tgz"
   },
   "scripts": {
     "start": "react-scripts start",
